# pytest

./: README.md  test_Start.py
blog_app/: pyproject.toml
blog_app/blog/: models.py
blog_app/tests/: test_article.py
python_tdd/: setup.py
python_tdd/tests/: test_player.py
python_test_2/: pyproject.toml
python_test_2/sum/: another_sum.py
python_test_2/tests/: test_sum.py
tdd-todoapp/todoapp/: __init__.py
test_project/: app.py  pyproject.toml  test_app.py
