[tool.poetry]
name = "blog_app"
version = "0.1.0"
description = ""
authors = ["Carlos"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.1"
pydantic = {extras = ["email"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
