[tool.poetry]
name = "test_project"
version = "0.1.0"
description = ""
authors = ["Carlos Polanco"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
